--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/royojeda/restaurant-page#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.8",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
